# create-maa-project

./: .gitignore  .prettierignore  .prettierrc.mjs  README.md  README.zh-CN.md  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vitest.config.ts
.github/: cliff.toml
.github/workflows/: network-assets.yml  release.yml  schema-sync.yml
scripts/: build-sea.mjs  build.mjs  check-network-assets.ts  create-release-manifest.mjs  generate-template-assets.mjs  prepare-pypi-release.mjs  sync-release-version.mjs  sync-schema.mjs  test-python.mjs
src/: addons.ts  args.ts  assets.ts  controllers.ts  doctor.ts  features.ts  incremental-addons.ts  index.ts  lang.ts  log.ts  mcp.ts  project.ts  prompt.ts  report.ts  scaffold.ts  sync.ts  template-assets.generated.ts  templates.ts  types.ts  update.ts  utils.ts
templates/agent/: README.en.md  README.md  pyproject.toml  requirements.txt
templates/agent/agent/: agent_runtime.py  bootstrap.py  main.py
templates/agent/agent/custom/: __init__.py
templates/agent/agent/custom/action/: __init__.py  general.py
templates/agent/agent/custom/reco/: __init__.py  general.py
templates/agent/agent/custom/sink/: __init__.py
templates/agent/agent/utils/: __init__.py  logger.py  maa_types.py  params.py  pienv.py  runtime_paths.py
templates/agent/tools/schema/: custom.action.schema.json  custom.recognition.schema.json
tests/: addons.test.ts  args.test.ts  child-env.ts  lang.test.ts  mcp.test.ts  project.test.ts  prompt.test.ts  report.test.ts  scaffold.test.ts  templates.test.ts  test_py_wrapper.py
(+38 files in other folders)
