[project]
name = "create-maa-project"
version = "0.1.0"
description = "PyPI wrapper for create-maa-project"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
create-maa-project = "create_maa_project.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["py-wrapper/create_maa_project"]

