[project]
name = "{{slug}}"
version = "{{version}}"
requires-python = ">=3.13,<3.14"
dependencies = [
    "maafw>=0.0.0"
]

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "ruff>=0.11.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["agent"]
extraPaths = ["agent"]
pythonVersion = "3.13"
typeCheckingMode = "basic"
